--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   <span id="underscore">running…</span><br />
   <span id="underscore-escaped">running…</span><br />
   <span id="underscore-obj">running…</span><br />
-  <span id="underscore-obj-escaped">running…</span></br /> <br />
+  <span id="underscore-obj-escaped">running…</span><br /> <br />
   <span id="nunjucks">running…</span><br />
   <span id="nunjucks-escaped">running…</span><br />
   <span id="nunjucks-obj">running…</span><br />
-  <span id="nunjucks-obj-escaped">running…</span></br />
+  <span id="nunjucks-obj-escaped">running…</span><br />
 
   <script src="js/underscore.js"></script>
   <script type="text/javascript">
